[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://transparent.tres" type="StyleBox" id=2]
[ext_resource path="res://level selection.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 256
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="level_selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.948
margin_top = 1.948
margin_right = -1.948
margin_bottom = 1.948
rect_pivot_offset = Vector2( -665.48, -460.297 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = -2.0
margin_right = 1922.0
margin_bottom = 1078.0
color = Color( 0, 0.647059, 1, 1 )

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = 226.0
margin_right = 258.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Back"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -702.052
margin_top = -341.948
margin_right = 706.948
margin_bottom = -33.948
custom_fonts/font = SubResource( 5 )
text = "Pick a Level"
align = 1

[node name="levels" type="GridContainer" parent="."]
margin_left = 641.948
margin_top = 518.052
margin_right = 1281.95
margin_bottom = 630.052
custom_constants/hseparation = 151
columns = 5

[node name="1" type="Button" parent="levels"]
margin_right = 112.0
margin_bottom = 112.0
rect_min_size = Vector2( 112, 112 )
rect_pivot_offset = Vector2( 39.948, 32.052 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="levels"]
margin_left = 263.0
margin_right = 375.0
margin_bottom = 112.0
rect_min_size = Vector2( 112, 112 )
rect_pivot_offset = Vector2( 39.948, 32.052 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "2"

[node name="3" type="Button" parent="levels"]
margin_left = 526.0
margin_right = 638.0
margin_bottom = 112.0
rect_min_size = Vector2( 112, 112 )
rect_pivot_offset = Vector2( 39.948, 32.052 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "3"

[connection signal="pressed" from="Back" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="levels/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="levels/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="levels/3" to="." method="_on_3_pressed"]
